# hamster-empirical-study

./: .gitignore  .gitmodules  README.md  pyproject.toml
config/: config.py
figures/: dataset_characteristics.py  dataset_characteristics_2.py
scripts/: generate_model.py  generate_model_using_ray.py  generate_statistics.py
src/hamster/: cli.py
src/hamster/code_analysis/common/: __init__.py  common_analysis.py  reachability.py
src/hamster/code_analysis/focal_class_method/: focal_class_method.py
src/hamster/code_analysis/test_statistics/: __init__.py  call_and_assertion_sequence_details_info.py  input_analysis.py  project_analysis_info.py  setup_analysis_info.py  teardown_analysis_info.py  test_class_analysis_info.py  test_method_analysis_info.py
src/hamster/extract_statistics/: utils.py
src/hamster/extract_statistics/alter_hamster_model/: alter_hamster_model.py  alter_statistics.py  model_comparator.py  model_scanner.py
src/hamster/extract_statistics/assertion_details/: assertion_details.py
src/hamster/extract_statistics/overall_characteristics/: overall_characteristics.py
src/hamster/extract_statistics/test_input/: test_input_details.py
src/hamster/extract_statistics/test_method_sequence/: test_method_sequence.py  test_method_sequence_per_type_test_scope.py
src/hamster/extract_statistics/test_setup/: test_setup_details.py  test_teardown_details.py
src/hamster/utils/pretty/: color_logger.py  (+1 more)
tests/: test_class_analysis_runtime.py  test_general_app_statistics.py  test_hamster.py  test_method_analysis_runtime.py  test_reachability_runtime.py
