[tool.poetry]
name = "hamster"
version = "0.1.1"
description = "Hamster in a Wheel"
authors = []
license = "Apache 2.0"
readme = "README.md"
packages = [
    { include="hamster", from="src" }
]

[tool.poetry.dependencies]
python = "~3.11"
pandas = "^2.2.3"
requests = "^2.32.3"
toml = "^0.10.2"
repo = "^0.3.0"
rich = "14.0.0"
cldk = "1.0.6"
ray = "^2.46.0"
typer = "^0.16.0"
pydantic = "^2.11.0"
tree-sitter = "^0.24.0"
tree-sitter-java = "^0.23.5"
matplotlib = "^3.10.3"
poetry-core = "^2.1.3"
seaborn = "^0.13.2"
upsetplot = "^0.9.0"
tqdm = "^4.67.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"

[tool.poetry.scripts]
hamster = "hamster.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-s"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
